--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>Queremos que los usuarios puedan utilizarlo de manera eficiente y sin esfuerzo, con la capacidad de personalizar y añadir nuevos módulos para la gestión de inventarios. </p>
 <p>De este modo, logramos un sistema unificado para la gestión de activos informáticos y sus respectivos usuarios.</p>
     </section>
-<!--     <section id="team">
+     <section id="team">
         <h2>Equipo de Desarrollo</h2>
         <div class="team-container">
             <div class="team-member">
@@ -46,7 +46,7 @@
                 <p>Desarrollador Fullstack</p>
             </div>
         </div>
-    </section> -->
+    </section> 
 
     <script src="scripts.js"></script>
 </body>
