--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Equipo de Desarrollo</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="LEON.png" alt="Miembro del equipo 1" class="team-img">
+                <img src="LEON.jpeg" alt="Miembro del equipo 1" class="team-img">
                 <p>Leon Restrepo</p>
                 <p>Ingeniero de Aplicaciones</p>
             </div>
@@ -41,7 +41,7 @@
                 <p>Audivisuales</p>
             </div>
             <div class="team-member">
-                <img src="CESAR.png" alt="Miembro del equipo 3" class="team-img">
+                <img src="CESAR.jpeg" alt="Miembro del equipo 3" class="team-img">
                 <p>Cesar Buitrago</p>
                 <p>Desarrollador Fullstack</p>
             </div>
